@@ -1,6 +1,13 @@
 # ChangeLog for x11-plugins/purple-plugin_pack
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/purple-plugin_pack/ChangeLog,v 1.14 2008/02/21 20:29:57 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/purple-plugin_pack/ChangeLog,v 1.15 2008/04/01 02:48:18 tester Exp $
+
+*purple-plugin_pack-2.3.0 (01 Apr 2008)
+
+  01 Apr 2008; Olivier Crête <tester@gentoo.org>
+  -purple-plugin_pack-1.0.ebuild, -purple-plugin_pack-2.1.1.ebuild,
+  purple-plugin_pack-2.2.0.ebuild, +purple-plugin_pack-2.3.0.ebuild:
+  Version bump, mark stable on amd64, remove old
 
   21 Feb 2008; Jeroen Roovers <jer@gentoo.org>
   purple-plugin_pack-2.2.0.ebuild:
